# groq-cli-rust

./: .gitignore  Cargo.toml  Readme.md
groq_cli/: Cargo.toml
src/: main.rs  test.json
