[package]
name = "groq_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.117"
serde = {version ="1.0.203" , features = ["derive"]}
reqwest = {version="0.12.4", features=["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
thiserror = "1.0.61"

[[bin]]
name = "grrc"  # The command users will type to run your tool
path = "src/main.rs"