[package]
name = "groq-cli"
version = "0.1.1"
edition = "2021"
authors = ["Akshad Agrawal"]
description = "A basic Cli to interact with Groq Api"
readme = "Readme.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Akshad135/groq-cli-rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.117"
serde = {version ="1.0.203" , features = ["derive"]}
reqwest = {version="0.12.4", features=["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
thiserror = "1.0.61"

[[bin]]
name = "gcli"
path = "src/main.rs"